# chess-like-its-1899

./: README.md  main.py  pyproject.toml
game/: game.py  players.py
